# tdt-amiko

tdt/cvs/apps/misc/tools/: .gitignore  Makefile.am  configure.ac
tdt/cvs/apps/misc/tools/devinit/: configure.ac
tdt/cvs/apps/misc/tools/eplayer4/: eplayer4.c
tdt/cvs/apps/misc/tools/evremote2/: Makefile.am  Spark.c  evremote.c  global.h  remotes.h
tdt/cvs/apps/misc/tools/fp_control/: Spark.c  configure.ac  fp_control.c
tdt/cvs/apps/misc/tools/gst-plugins-dvbmediasink/: Makefile  ltmain.sh
tdt/cvs/apps/misc/tools/hotplug/: Makefile.am  configure.ac
tdt/cvs/apps/misc/tools/ipbox_eeprom/: Makefile  eeprom
tdt/cvs/apps/misc/tools/libcoolstream/: Makefile
tdt/cvs/apps/misc/tools/libeplayer3/: Makefile.am  configure.ac
tdt/cvs/apps/misc/tools/libmme_host/: Makefile.am
tdt/cvs/apps/misc/tools/libmmeimage/: Makefile.am  configure.ac
tdt/cvs/apps/misc/tools/libstgles/: Makefile.am
tdt/cvs/cdk/: .gitignore  Makefile.am  Makefile.in  acinclude.m4  autogen.sh  bb.py  configure.ac  dep-graph.py  lib  logo.txt  make.sh  makelog  mv.py  own_build  packaging.mk  pkg.py  pkg2.py  remake.sh  remote-reinstall.sh  rules-archive  rules-install  rules-make  setuptdt.sh  smart-rules  smart-rules-e2  smart-rules.am  smart-rules.mk  smart-rules.pl  split_packages.py
tdt/cvs/cdk/Patches/: .directory  DVDPlayer.patch  busybox-1.20.2.config  busybox-1.21.0.config  e2fsprogs-1.42.4.patch  e2fsprogs-1.42.7.patch  enigma2-networkbrowser-support_autofs.patch  enigma2-nightly.0.diff  enigma2-nightly.1.diff  enigma2-nightly.2.diff  enigma2-nightly.3.gstreamer.diff  enigma2-nightly.4.diff  enigma2-nightly.5.diff  enigma2-nightly.6.diff  enigma2-pli-nightly.0.diff  enigma2-pli-nightly.1.diff  enigma2-pli-nightly.2.diff  enigma2-pli-nightly.3.diff  enigma2-pli-nightly.4.diff  enigma2-pli-nightly.5.diff  enigma2-pli-nightly.9.diff  ffmpeg-1.0.patch  graphlcd.patch  gst-plugins-good-0.10.29_avidemux_only_send_pts_on_keyframe.patch  ipkg-utils.diff  libdreamdvd-1.0-support_sh4.patch  libdvbsi++-0.3.6.patch  libtool-2.4.2-duckbox-branding.patch  linux-sh4-2.6.23.17-0123_hl101.config  linux-sh4-2.6.23.17-0123_hl101.config.debug  linux-sh4-2.6.23.17-0123_spark.config  linux-sh4-2.6.32.16-0205_spark.config  linux-sh4-2.6.32.16-0205_spark.config.debug  linux-sh4-2.6.32.28-0207_hl101.config  linux-sh4-2.6.32.28-0207_hl101.config.debug  linux-sh4-2.6.32.28-0207_spark.config  linux-sh4-2.6.32.28-0207_spark.config.debug  linux-sh4-2.6.32.28-0207_spark7162.config  linux-sh4-2.6.32.28-0207_spark7162.config.debug  linux-sh4-2.6.32.46-0209_hl101.config  (+87 more)
tdt/cvs/cdk/Patches/busybox-1.20.0/: busybox-1.20.0.config
tdt/cvs/cdk/Patches/busybox-1.20.1/: busybox-1.20.1.config
tdt/cvs/cdk/Patches/busybox-1.20.2/: busybox-1.20.2.config
tdt/cvs/cdk/make/: archive-specs.mk  bare-os.mk  bootstrap.mk  buildenv.mk  busybox.mk  ccache.mk  cleantargets.mk  contrib-apps-specs.mk  contrib-apps.mk  contrib-libs.mk  disttargets.mk  diverse-tools.mk  enigma2-nightly.mk  enigma2-pli-nightly.mk  enigma2-plugins.mk  enigma2.mk  externe-plugins.mk  externe-skins.mk  hostapps.mk  linux-kernel.mk  misc-specs.mk  misc_tools.mk  net-apps.mk  neutrino_hd2.mk  partition-images.mk  release.mk  release_neutrino.mk  release_neutrino_nightly.mk  release_neutrino_static.mk  release_static.mk  release_vdr.mk  release_vdrdev2.mk  root-etc.mk  smart_release.mk  smart_release_vdr.mk  smart_release_xbmc.mk  u-boot.mk  update.mk  vdr.mk  vdrdev.mk  (+2 more)
tdt/cvs/cdk/root/: .gitignore
tdt/cvs/cdk/root/bootscreen/: bootlogo.mvi
tdt/cvs/cdk/root/etc/: 11-usbhd-automount.rules  30-modemswitcher.rules  55-modem.rules  60-dvb-ca.rules  90-cec_aotom.rules  fstab  image-version  inetd.conf  inittab  inittab_xbmc  lircd_spark.conf  lircd_spark.conf.09_00_07  lircd_spark.conf.09_00_08  lircd_spark.conf.09_00_0B  lircd_spark.conf.09_00_1D  lircd_spark7162.conf  modem.conf  modem.list  motd  transmission.json
tdt/cvs/cdk/root/etc/Wireless/: wlan.usbmap
tdt/cvs/cdk/root/etc/enigma2/: blacklist  blacklist_org  bouquets.radio  bouquets.tv  bouquets.tv_org  cables.xml  lamedb  lamedb_org  settings  skin_user.xml  terrestrial.xml  userbouquet.33fc5.tv  userbouquet.33fc5.tv_org  userbouquet.dbe00.tv  userbouquet.dbe00.tv_org  userbouquet.dbe01.tv  userbouquet.dbe01.tv_org  userbouquet.dbe03.tv  userbouquet.favourites.radio  userbouquet.hd_sender__tv_.tv  userbouquet.hd_sender__tv_.tv_org  userbouquet.platforma_dv__tv_.tv  userbouquet.platforma_dv__tv_.tv_org  userbouquet.sky__tv_.tv  userbouquet.sky__tv_.tv_org
tdt/cvs/cdk/root/etc/init.d/: avahi-daemon  mountall.sh  rdate.sh  transmission  transmission.init  udhcpc
tdt/cvs/cdk/root/etc/ipkg/: non-free-feed.conf
tdt/cvs/cdk/root/etc/network/: wlanscan.py
tdt/cvs/cdk/root/etc/ppp/: ip-down  ip-pre-up  ip-up
tdt/cvs/cdk/root/etc/tuxbox/: satellites.xml  terrestrial.xml
tdt/cvs/cdk/root/lib/modules/: af9013.ko  dvb-pll.ko  dvb-usb-af9015.ko  dvb-usb.ko  mt2060.ko  mxl5005s.ko  qt1010.ko  tda18218.ko  tda18271.ko
tdt/cvs/cdk/root/release/: crond  fstab_hl101  halt_spark  halt_spark7162  inetd  initmodules_hl101  initmodules_spark  initmodules_spark7162  initmodules_vdr_spark  initmodules_vdr_spark7162  initmodules_xbmc_spark  initmodules_xbmc_spark7162  lircd  makedev  mountall  mountsysfs  networking  official-feed.conf  opkg.conf  rc  rcS_spark  rcS_spark7162  rcS_stm23_hl101  rcS_stm23_neutrino_spark  rcS_stm23_spark  rcS_stm23_spark7162  rcS_vdrdev2_spark  rcS_vdrdev_spark  reboot  sendsigs  syslogd  telnetd  umountfs
tdt/cvs/cdk/root/sbin/: MAKEDEV  MAKEDEV_twin_no_ci
tdt/cvs/cdk/root/usr/lib/: libgcrypt.so.11.5.2  libgnutls-extra.so.26.4.6  libgnutls.so.26.4.6  libgpg-error.so.0.3.0  libiw.so.29  liblzo2.so.2.0.0  libpng12.so.0.16.0  libusb-1.0.so.0.0.0
tdt/cvs/cdk/root/usr/sbin/: blkid  iwconfig  iwevent  iwgetid  iwlist  iwpriv  iwspy  wpa_cli  wpa_passphrase  wpa_supplicant
tdt/cvs/cdk/root/usr/tuxtxt/: tuxtxt2.conf
tdt/cvs/cdk/root/var/etc/: .version
tdt/cvs/cdk/root/var/keys/: oscam.conf  oscam.dvbapi  oscam.guess  oscam.server  oscam.server2  oscam.services  oscam.srvid
(+147 files in other folders)
