AUTOMAKE_OPTIONS = gnu

if ENABLE_MEDIAFWGSTREAMER
SUBDIRS = \
	devinit \
	evremote2 \
	libeplayer3 \
	fp_control \
	showiframe \
	streamproxy \
	stfbcontrol \
	ustslave \
	gitVCInfo \
	vfdctl \
	libmme_host \
	libmmeimage
else
SUBDIRS = \
	devinit \
	evremote2 \
	fp_control \
	showiframe \
	streamproxy \
	stfbcontrol \
	ustslave \
	gitVCInfo \
	vfdctl \
	libmme_host \
	libmmeimage
endif
